@@ -1,5 +1,9 @@
 2002-01-15  Fumitoshi UKAI  <ukai@debian.or.jp>
 
+	* file.c (loadGeneralFile): return NULL, not NO_BUFFER
+
+2002-01-15  Fumitoshi UKAI  <ukai@debian.or.jp>
+
 	* [w3m-dev 02833] ssl_forbid_method in SSL Setting
 	* rc.c (params7): ssl_forbid_method moved here
 	* rc.c (params8): ssl_forbid_method removed here
